// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-general-list Renders \`alarm-general-list\` with alarms 1`] = `
<div>
  <div
    class="v-subheader theme--light"
  >
    General
  </div>
  <div>
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table theme--light"
      >
        <thead>
          <tr>
            <th
              aria-label="Author: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value=""
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Author
                </span>
              </div>
            </th>
            <th
              aria-label="Connector: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value=""
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Connector
                </span>
              </div>
            </th>
            <th
              aria-label="Component: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value=""
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Component
                </span>
              </div>
            </th>
            <th
              aria-label="Resource: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value=""
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Resource
                </span>
              </div>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="4"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="text-xs-left"
            >
              author-0
            </td>
            <td
              class="text-xs-left"
            >
              connector-0
            </td>
            <td
              class="text-xs-left"
            >
              component-0
            </td>
            <td
              class="text-xs-left"
            >
              resource-0
            </td>
          </tr>
          <tr>
            <td
              class="text-xs-left"
            >
              author-1
            </td>
            <td
              class="text-xs-left"
            >
              connector-1
            </td>
            <td
              class="text-xs-left"
            >
              component-1
            </td>
            <td
              class="text-xs-left"
            >
              resource-1
            </td>
          </tr>
          <tr>
            <td
              class="text-xs-left"
            >
              author-2
            </td>
            <td
              class="text-xs-left"
            >
              connector-2
            </td>
            <td
              class="text-xs-left"
            >
              component-2
            </td>
            <td
              class="text-xs-left"
            >
              resource-2
            </td>
          </tr>
          <tr>
            <td
              class="text-xs-left"
            >
              author-3
            </td>
            <td
              class="text-xs-left"
            >
              connector-3
            </td>
            <td
              class="text-xs-left"
            >
              component-3
            </td>
            <td
              class="text-xs-left"
            >
              resource-3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`alarm-general-list Renders \`alarm-general-list\` with empty items 1`] = `
<div>
  <div
    class="v-subheader theme--light"
  >
    General
  </div>
  <div>
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table theme--light"
      >
        <thead>
          <tr>
            <th
              aria-label="Author: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value=""
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Author
                </span>
              </div>
            </th>
            <th
              aria-label="Connector: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value=""
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Connector
                </span>
              </div>
            </th>
            <th
              aria-label="Component: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value=""
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Component
                </span>
              </div>
            </th>
            <th
              aria-label="Resource: Not sorted."
              aria-sort="none"
              class="column text-xs-left"
              data-value=""
              role="columnheader"
              scope="col"
            >
              <div
                class="layout align-center"
              >
                <span
                  class=""
                >
                  Resource
                </span>
              </div>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="4"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="text-xs-center"
              colspan="4"
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
